[package]
name = "rusqlcipher"
version = "0.12.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
description = "Ergonomic wrapper for SQLCipher"
repository = "https://github.com/mikelodder7/rusqlcipher"
documentation = "http://mikelodder7.github.io/rusqlcipher/rusqlcipher/index.html"
readme = "README.md"
keywords = ["sqlite", "sqlcipher", "database", "ffi"]
license = "MIT"
categories = ["database"]

[badges]
travis-ci = { repository = "jgallagher/rusqlite" }
appveyor = { repository = "jgallagher/rusqlite" }

[lib]
name = "rusqlcipher"

[features]
load_extension = []
backup = ["libsqlcipher-sys/min_sqlite_version_3_6_11"]
blob = ["libsqlcipher-sys/min_sqlite_version_3_7_4"]
functions = ["libsqlcipher-sys/min_sqlite_version_3_7_3"]
trace = ["libsqlcipher-sys/min_sqlite_version_3_6_23"]
bundled = ["libsqlcipher-sys/bundled"]
buildtime_bindgen = ["libsqlcipher-sys/buildtime_bindgen"]
limits = []

[dependencies]
time = "0.1.0"
bitflags = "0.9"
lru-cache = "0.1"
chrono = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
lazy_static = "0.2"
regex = "0.2"

[dependencies.libsqlcipher-sys]
path = "libsqlcipher-sys"
version = "0.8"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"
