[package]
name = "rusqlcipher"
version = "0.14.7"
authors = ["John Gallagher <jgallagher@bignerdranch.com>", "Mike Lodder <mike.lodder@evernym.com>"]
description = "Ergonomic wrapper for SQLCipher"
repository = "https://github.com/mikelodder7/rusqlcipher"
documentation = "http://mikelodder7.github.io/rusqlcipher/rusqlcipher/index.html"
readme = "README.md"
keywords = ["sqlite", "sqlcipher", "database", "ffi"]
license = "MIT"
categories = ["database"]

[badges]
travis-ci = { repository = "jgallagher/rusqlite" }
appveyor = { repository = "jgallagher/rusqlite" }

[lib]
name = "rusqlcipher"

[features]
load_extension = []
backup = ["libsqlcipher-sys/min_sqlite_version_3_6_11"]
blob = ["libsqlcipher-sys/min_sqlite_version_3_7_4"]
functions = ["libsqlcipher-sys/min_sqlite_version_3_7_3"]
trace = ["libsqlcipher-sys/min_sqlite_version_3_6_23"]
bundled = ["libsqlcipher-sys/bundled"]
buildtime_bindgen = ["libsqlcipher-sys/buildtime_bindgen"]
limits = []
hooks = []
sqlcipher = ["libsqlcipher-sys/sqlcipher"]

[dependencies]
time = "0.1.0"
bitflags = "1.0"
lru-cache = "0.1"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
lazy_static = "1.0"
regex = "1.0"

[dependencies.libsqlcipher-sys]
path = "libsqlcipher-sys"
version = "0.8.7"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"

[package.metadata.docs.rs]
features = [ "backup", "blob", "chrono", "functions", "limits", "load_extension", "serde_json", "trace" ]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
